Fix horizontal overflow

--- a/src/resources/style.css
+++ b/src/resources/style.css
@@ -290,11 +290,20 @@ nav ul ul:last-child > li {
   color: [[text-color]];
 }
 
-main {
+.main.outer {
   display: inline-block;
-  width: 100%;
-  margin-left: [[logo-width]];
-  margin-top: [[unit-size]];
+  position: fixed;
+  left: [[logo-width]];
+  top: [[unit-size]];
+  right: 0px;
+  bottom: 0px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  padding: 0px;
+  margin: 0px;
+}
+
+.main.inner {
   padding: 15px;
 }
 
